# cai

./: 404.html  CITATION.cff  README.md  index.html  objects.inv  pyproject.toml
agents/: index.html
api/: index.html
benchmarking/attack_defense/: index.html
benchmarking/cyber_ranges/: index.html
benchmarking/jeopardy_ctfs/: index.html
benchmarking/knowledge_benchmarks/: index.html
benchmarking/overview/: index.html
benchmarking/privacy_benchmarks/: index.html
benchmarking/running_benchmarks/: index.html
cai/: index.html
cai/api-reference/core/: index.html
cai/architecture/overview/: index.html
cai/case-studies/operator-artifact-evidence/: index.html
cai/development/contributing/: index.html
cai/getting-started/MCP/: index.html
cai/getting-started/commands/: index.html
cai/getting-started/configuration/: index.html
cai/getting-started/installation/: index.html
cai/getting-started/packet_capture_wsl/: index.html
cai/troubleshooting/operator_feedback_reproduction/: index.html
cai/troubleshooting/platform_limitations/: index.html
cai_architecture/: index.html
cai_benchmark/: index.html
cai_citation_and_acknowledgments/: index.html
cai_development/: index.html
cai_faq/: index.html
cai_find_us/: index.html
cai_installation/: index.html
cai_list_of_models/: index.html
cai_pro/: index.html
cai_prompt_injection/: index.html
cai_quickstart/: index.html
config/: index.html
context/: index.html
continue_mode/: index.html
environment_variables/: index.html
examples/: index.html
guardrails/: index.html
handoffs/: index.html
index2/: index.html
mcp/: index.html
models/: index.html
mui/chat_features/: index.html
mui/gestures_shortcuts/: index.html
mui/getting_started/: index.html
mui/mui_index/: index.html
mui/user_interface/: index.html
multi_agent/: index.html
providers/ollama/: index.html
providers/ollama_cloud/: index.html
queue_file_feature/: index.html
quickstart/: index.html
ref/: index.html
ref/agent/: index.html
ref/agent_output/: index.html
ref/exceptions/: index.html
ref/extensions/handoff_filters/: index.html
ref/extensions/handoff_prompt/: index.html
ref/function_schema/: index.html
ref/guardrail/: index.html
ref/handoffs/: index.html
ref/items/: index.html
ref/lifecycle/: index.html
ref/mcp/server/: index.html
ref/mcp/util/: index.html
ref/model_settings/: index.html
ref/models/interface/: index.html
ref/models/openai_chatcompletions/: index.html
ref/models/openai_responses/: index.html
ref/result/: index.html
ref/run/: index.html
ref/run_context/: index.html
ref/stream_events/: index.html
ref/tool/: index.html
ref/tracing/: index.html
ref/tracing/create/: index.html
ref/tracing/processor_interface/: index.html
ref/tracing/processors/: index.html
ref/tracing/scope/: index.html
ref/tracing/setup/: index.html
ref/tracing/span_data/: index.html
ref/tracing/spans/: index.html
ref/tracing/traces/: index.html
ref/tracing/util/: index.html
ref/usage/: index.html
ref/voice/events/: index.html
ref/voice/exceptions/: index.html
ref/voice/input/: index.html
ref/voice/model/: index.html
ref/voice/models/openai_provider/: index.html
ref/voice/models/openai_stt/: index.html
ref/voice/models/openai_tts/: index.html
ref/voice/pipeline/: index.html
ref/voice/pipeline_config/: index.html
ref/voice/result/: index.html
ref/voice/utils/: index.html
ref/voice/workflow/: index.html
research/: index.html
results/: index.html
running_agents/: index.html
search/: search_index.json
streaming/: index.html
stylesheets/: extra.css
tools/: index.html
tracing/: index.html
tracing_cai/: index.html
tui/advanced_features/: index.html
tui/commands_reference/: index.html
tui/getting_started/: index.html
tui/keyboard_shortcuts/: index.html
tui/sidebar_features/: index.html
tui/teams_and_parallel_execution/: index.html
tui/terminals_management/: index.html
tui/troubleshooting/: index.html
tui/tui_index/: index.html
tui/user_interface/: index.html
tui_command_analysis/: index.html
usage_tracking/: index.html
visualization/: index.html
voice/pipeline/: index.html
voice/quickstart/: index.html
voice/tracing/: index.html
